# axum-template

./: Cargo.toml  README.md  docker-compose.yaml
.cargo/: config.toml
src/: main.rs
